--- a/index.html
+++ b/index.html
@@ -11,13 +11,19 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #f0f0f0;
-            font-family: Arial, sans-serif;
+            background: linear-gradient(135deg, #ff7eb3, #ff758c, #feb47b);
+            font-family: 'Comic Sans MS', cursive, sans-serif;
             text-align: center;
+            color: #fff;
         }
         h1 {
-            color: #333;
-            font-size: 2.5em;
+            background: rgba(0, 0, 0, 0.5);
+            padding: 20px 30px;
+            border-radius: 15px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            font-size: 3em;
+            text-transform: uppercase;
+            letter-spacing: 2px;
         }
     </style>
 </head>
