--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina Meme</title>
+    <title>Pagina Meme - Stile Terminale</title>
     <style>
         body {
             display: flex;
@@ -11,23 +11,36 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background: linear-gradient(135deg, #ff7eb3, #ff758c, #feb47b);
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+            background-color: #000;
+            color: #00ff00;
+            font-family: 'Courier New', Courier, monospace;
             text-align: center;
-            color: #fff;
         }
         h1 {
-            background: rgba(0, 0, 0, 0.5);
-            padding: 20px 30px;
-            border-radius: 15px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-            font-size: 3em;
-            text-transform: uppercase;
-            letter-spacing: 2px;
+            font-size: 2em;
+            border: 2px solid #00ff00;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px #00ff00;
+        }
+        @keyframes blink {
+            0%, 100% {
+                opacity: 1;
+            }
+            50% {
+                opacity: 0;
+            }
+        }
+        .cursor {
+            display: inline-block;
+            width: 10px;
+            height: 20px;
+            background-color: #00ff00;
+            animation: blink 1s step-start infinite;
         }
     </style>
 </head>
 <body>
-    <h1>Se cerchi Lucio non lo trovi in questa pagina</h1>
+    <h1>Se cerchi Lucio non lo trovi in questa pagina<span class="cursor"></span></h1>
 </body>
 </html>
